huge refactorization to allow faster, more intelligent queries